[build-system]
requires = ["setuptools>=67.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wifitest"
version = "0.1.9"
authors = [
  { name="Juan Bindez", email="juanbindez780@gmail.com" },
]
description = "Python 3 library for wifi testing."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPLv2 license"}
keywords = ["bruteforce", "wifi", "tools", "cli", "scan",]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python",
	"Topic :: Internet",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Terminals",
	"Topic :: Utilities",
]
dependencies = ['pywifi']

[project.urls]
"Homepage" = "https://github.com/juanbindez/wifitest"
"Bug Reports" = "https://github.com/juanbindez/wifitest/issues"
"Read the Docs" = "http://wifitest.readthedocs.io/"

[project.scripts]
wifitest = "wifitest.cli:main"

[tool.setuptools.packages.find]
include = ["wifitest*"]

[tool.setuptools]
license-files = ["LICENSE"]